# Procesamiento_Imagenes_UP

./: .gitignore  CarasTiempoReal.py  Ejemplo1.py  Erosion.py  Mascaras_suavizado_bordes.py  TareaModificacionHSVdinamico.py  algoritmoDiv.py  borrame.ipynb  cabal.project  codigo1.py  codigoejemplo.py  dilatacion.py  divison.cpp  ejercicio_iluminacion.py  mueveme.md  perimetro.py  pseudocolor.py  requirements.txt  tarea1.py  tarea2.py  tareaErosionDilatacion.py  transformaciones.py
Ejercicios Procesamiento Img a Color/: ModeloHSV.py  SegmentacionModelos.py
HaskellProcesamiento/: CHANGELOG.md  HaskellProcesamiento.cabal
HaskellProcesamiento/app/: Ejemplos.hs  Main.hs  Segmentacion.hs  TareaIluminacion.hs  Tareas.hs  TryingFriday.hs
HaskellProcesamiento/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Profe/: CambioTonalidadHue.py  EjemploSegPixel.py  FourierFiltroPasaAltas.py  FourierFiltroPasaBajas.py  FourierFiltroPasaBandas.py  FourierFiltroRechazaBandas.py  Transformaciones.py
TareaEjercicioIluminación/: tareaEjercicioIluminacion.py
TareaFiltros2/: filtroPasaAltas.py  filtroPasaBajas.py  filtroPasaBandas.py  filtroRechazaBandas.py
TareaMascaras/: TareaMascaras.py
TareasH/segmentacion/: tareaSegmentacion.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
fotos/: CapturaImagen.py
presentaciones/: Introducción_ImagenesDigitales_PDI.pptx  Visión Computacional 2da Parte.pptx
