cabal-version:      3.0
name:               HaskellProcesamiento
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             GerardoHuHer
maintainer:         gerardohuerta1502@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable HaskellProcesamiento
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.18.2.1,
        JuicyPixels
    hs-source-dirs:   app
    default-language: Haskell2010
